@@ -1,3 +1,13 @@
+2007-10-02  Vitaly Alexeev <tishka92@yahoo.com>
+		* gameswf/gameswf.h
+		* gameswf/gameswf_function.cpp
+		* gameswf/gameswf_function.h
+		* gameswf/gameswf_object.h
+		* gameswf/gameswf_test_ogl.cpp
+		* gameswf/win32/VC8/libgameswf.vcproj
+		Added function.call() method implementation that 
+		invokes the function represented by a Function object.
+
 2007-09-29  Vitaly Alexeev <tishka92@yahoo.com>
 		* gameswf/gameswf.h
 		* gameswf/gameswf_action.cpp
